Let's see if this prevents background flicker.

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -1846,13 +1846,6 @@ select {
         box-shadow: inset 0 1px 0 @bc-shadow-small;
     }
 
-    > option { // This works on windows.
-        .dark & {
-            background: @dark-bc-menu-bg !important;
-            color: @dark-bc-menu-text !important;
-        }
-    }
-
     .dark & {
         background-color: @dark-bc-btn-bg;
         border: 1px solid @dark-bc-btn-border;
